--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -18,11 +18,12 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">Spring Security演示</a>
+          <a class="navbar-brand" href="#">Spring Security demo</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-           <li><a th:href="@{/}"> 首页 </a></li>
+           <li><a th:href="@{/}"> Home</a></li>
+           <li><a th:href="@{/admin}"> Admin </a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
